--- a/views/newfeed.ejs
+++ b/views/newfeed.ejs
@@ -433,12 +433,12 @@
                             <div style="height:0.5rem;width:0.5rem;border-radius: 100%;background-color: chartreuse;float:right;margin-top:1.5rem"></div>
                         </li>
                         <li class="list-group-item">
-                            <img src="/system/ee58fcc0ff45002b8d416bd7685809ce_1487040461.jpg" class="friendOnline" style="height:3rem;width:3rem;border-radius: 100%;float:left;margin-right:2rem" alt="">
+                            <img src="https://znews-photo.zadn.vn/w660/Uploaded/mzdys/2014_11_12/9.jpg" class="friendOnline" style="height:3rem;width:3rem;border-radius: 100%;float:left;margin-right:2rem" alt="">
                             <h6 style="margin-top:1rem; float:left">Sơn Tùng MTP</h6>
                             <div style="height:0.5rem;width:0.5rem;border-radius: 100%;background-color: chartreuse;float:right;margin-top:1.5rem"></div>
                         </li>
                         <li class="list-group-item">
-                            <img src="/system/1513222160122_600.jpg" class="friendOnline" style="height:3rem;width:3rem;border-radius: 100%;float:left;margin-right:2rem" alt="">
+                            <img src="https://avatar-nct.nixcdn.com/playlist/2017/12/14/6/e/d/0/1513223203614_500.jpg" class="friendOnline" style="height:3rem;width:3rem;border-radius: 100%;float:left;margin-right:2rem" alt="">
                             <h6 style="margin-top:1rem; float:left">ST Sơn Thạch</h6>
                             <div style="height:0.5rem;width:0.5rem;border-radius: 100%;background-color: chartreuse;float:right;margin-top:1.5rem"></div>
                         </li>
